FiscalNote - Director of Data Engineering. Data Engineer - Automotive | Averity. VEON - Big Data Engineer. Junior Data Engineer - NIKE, Inc. Careers. Massive Insights Data Engineer | SmartRecruiters. Ubisoft Data Engineer | SmartRecruiters. HopHR - Data Engineer - San Jose, CA. Game Analytics - Jobs: Senior Data Engineer - Apply online. Purpose Financial Data Engineer | SmartRecruiters. HopHR - Data Engineer - Boston, MA. StreetLight Data - Senior Data Engineer. Vichara Data Engineer - Python AWS Java | SmartRecruiters. Job Application for Senior Data Engineer at Grailed. Data Engineer - Rakuten Careers. Data Engineer - CBS Interactive Careers. Pac-12 Networks Careers - Data Engineer. VIE - R&I data engineer - Chemoinformatics | Solvay. Senior Data Engineer | Averity. Principal Data Engineer (HealthTech) | Averity. DataProphet Data Engineer - Customer Success | SmartRecruiters. Ancestry - Data Engineer – Enterprise Data Management / DNA Operations. Crisalix - Jobs: Data Engineer - Apply online. Denodo Technologies Data Engineer - SQL / Big Data / Cloud | SmartRecruiters. Job Application for Sr. Data Engineer - Airflow Specialization  at Curology.       Data Engineer - DefinedCrowd     . Guidewire Software, Inc. Careers - Senior Data Engineer, Cyber Risk Analytics - San Mateo, CA. Zscaler Careers - Senior Big Data Engineer. Job @ talpasolutions (Essen): Data Engineer | JOIN. Socure - Senior Data Engineer. StreetLight Data - Senior Data Engineer. PointClickCare - Data Engineers - All Seniority Levels (Toronto Office). Xfers - Data Engineer - Taiwan Taipei. Mattermost - Data Engineer (Remote). Crossmedia Data Engineer | SmartRecruiters. Aroghia Group Sr. Data Engineer for Leading Sportswear Brand (W2 Only, no C2C!) | SmartRecruiters. Aginic - Jobs: Data Engineer (Melbourne) - Apply online. Aginic - Jobs: Data Engineer (Sydney) - Apply online. Job Application for Data Engineer  at NextGen America. Job Application for Data Engineer II at OKCupid. CMDB Data Engineer - Joh

--- a/data-engineer.html
+++ b/data-engineer.html
@@ -40,11 +40,15 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/fiscalnote/8eb2bd6f-76c8-40f8-a7e7-e3a9279df065'>FiscalNote - Director of Data Engineering</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
 <h5><a href='https://jobs.crelate.com/portal/averityteam/job/keecfjo3d6kzeik6d9ffuaqqne'>Data Engineer - Automotive | Averity</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vimpelcom/4770762b-fd25-4080-9830-d71f9e627605'>VEON - Big Data Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/vimpelcom/4770762b-fd25-4080-9830-d71f9e627605'>VEON - Big Data Engineer</a></h5> 
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -102,7 +106,7 @@ online content network for information and online operations of CBS Corporation
 <p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://solvay.avature.net/careers/JobDetail/2019-07-19/9500'>VIE - R&I data engineer - Chemoinformatics | Solvay</a></h5> 
+<h5><a href='https://solvay.avature.net/careers/JobDetail/2019-07-19/9500'>VIE - R&I data engineer - Chemoinformatics | Solvay</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... This position is in Solvay Research & Innovation Centre Brussels, in the recently 
 created Data Management Excellence Team. Within this multidisciplinary team?...</p>
@@ -115,7 +119,7 @@ created Data Management Excellence Team. Within this multidisciplinary team?...<
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/DataProphet/743999692241246-data-engineer-customer-success'>DataProphet Data Engineer - Customer Success | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DataProphet/743999692241246-data-engineer-customer-success'>DataProphet Data Engineer - Customer Success | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cape Town Cape Town South Africa</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -170,12 +174,12 @@ and adapt?...</p>
 Engineering. Full-Time. Submit your application. LinkedIn profile. Loading. Apply 
 with?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/xfers/e47a2d36-c5a2-4bfe-9b16-e63ee0fa2911'>Xfers - Data Engineer - Taiwan Taipei</a></h5> 
+<h5><a href='https://jobs.lever.co/xfers/e47a2d36-c5a2-4bfe-9b16-e63ee0fa2911'>Xfers - Data Engineer - Taiwan Taipei</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Data Engineer - Taiwan Taipei. Taipei. Software Engineers. Full Time. Apply for 
 this job. In Xfers, you'll likely get experience on many different projects across?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/mattermost/9acc3876-4e0f-40eb-ac23-cd79e1dcbf4c/apply'>Mattermost - Data Engineer (Remote)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/mattermost/9acc3876-4e0f-40eb-ac23-cd79e1dcbf4c/apply'>Mattermost - Data Engineer (Remote)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... On a scale of 1 (not a fit) to 10 (perfect fit), how would you rate your potential fit 
 with the role for which you're applying??. Please tell us why you selected such a
@@ -193,7 +197,7 @@ with the role for which you're applying??. Please tell us why you selected such 
 <p><span class="badge badge-light">Melbourne Melbourne Melbourne Melbourne, Victoria, Australia</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aginic.workable.com/j/C358FBC756'>Aginic - Jobs: Data Engineer (Sydney) - Apply online</a></h5> 
+<h5><a href='https://aginic.workable.com/j/C358FBC756'>Aginic - Jobs: Data Engineer (Sydney) - Apply online</a></h5> 
 <p><span class="badge badge-light">Sydney Sydney Sydney Sydney Sydney</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -214,11 +218,11 @@ Engineer for managing the CMDB (Configuration Management Database)?...</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://datatonic.workable.com/j/33A776CCFC'>Datatonic - Jobs: Data Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://datatonic.workable.com/j/33A776CCFC'>Datatonic - Jobs: Data Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Munich Munich London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://datatonic.workable.com/j/7D36E4E05A'>Datatonic - Jobs: Data Engineer - Apply online</a></h5> 
+<h5><a href='https://datatonic.workable.com/j/7D36E4E05A'>Datatonic - Jobs: Data Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -252,7 +256,7 @@ broad disciplines from software, artificial intelligence/machine learning, elect
 <p><span class="badge badge-light">Bangalore Bangalore</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs-getty.icims.com/jobs/3440/data-engineer/job'>Data Engineer in Los Angeles, California | Careers at The Getty</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs-getty.icims.com/jobs/3440/data-engineer/job'>Data Engineer in Los Angeles, California | Careers at The Getty</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... The Getty is now hiring a Data Engineer in Los Angeles, California. Review all of 
 the job details and apply today!</p>
@@ -326,7 +330,7 @@ The hire will be responsible for expanding and optimizing our Operations data?..
 <p><span class="badge badge-light">Bengaluru Bangalore</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999692034502-data-engineer'>Adam Kay Group Data Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999692034502-data-engineer'>Adam Kay Group Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Michigan, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -366,7 +370,7 @@ The hire will be responsible for expanding and optimizing our Operations data?..
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cbs.avature.net/cbsinteractivecareers/JobDetail/Data-Engineer/15143'>Data Engineer - CBS Interactive Careers</a></h5> 
+<h5><a href='https://cbs.avature.net/cbsinteractivecareers/JobDetail/Data-Engineer/15143'>Data Engineer - CBS Interactive Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Truly premium content. At true scale. Only CBSi. CBS Interactive is the premier 
 online content network for information and online operations of CBS Corporation
@@ -376,7 +380,7 @@ online content network for information and online operations of CBS Corporation
 <p><span class="badge badge-light">Boulder Boulder, Colorado</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://elinvar.recruitee.com/o/data-engineer-mfdiv-berlin'>
+<h5><a href='https://elinvar.recruitee.com/o/data-engineer-mfdiv-berlin'>
       Data Engineer (m/f/div) - Elinvar GmbH
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
@@ -399,7 +403,7 @@ working in Datawarehouse, Data lake, Hadoop landscape. 3. Expert level?...</p>
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/drizly/0729bdbf-5e2a-4ee2-a0c6-53a47c427f13'>Drizly - Analytics Data Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/drizly/0729bdbf-5e2a-4ee2-a0c6-53a47c427f13'>Drizly - Analytics Data Engineer</a></h5> 
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -440,7 +444,7 @@ Engineering. Full-time. Apply for this job. Quizlet's mission is to help student
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/meilleursagents/1c01fcc1-6182-417e-a816-efac0b560bb3'>MeilleursAgents - Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/meilleursagents/1c01fcc1-6182-417e-a816-efac0b560bb3'>MeilleursAgents - Data Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>13 juil. 2019 ... Pour ce faire, vous utiliserez des techniques avanc?es d'intelligence artificielle (
 TAL, Machine Learning, mod?lisation spatio-temporelle) qui seront mises en?...</p>
@@ -469,10 +473,6 @@ YOUR TEAM. The successful candidate will join the team responsible for the?...</
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oOMAafw4&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nrKgPKwv'>Guidewire Software, Inc. Careers - Senior Data Engineer, Cyber Risk Analytics - San Mateo, CA</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA</span></p>
-<p>Posted on:: 2019-07-20</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=okpI9fwk&__jvst=Employee&__jvsd=sPcd2gw1&__jvsc=Twitter&bid=nexgPKw5'>Schneider Electric NAM Careers - NAM Enterprise IT Data Services - Data Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-20</p>
 <hr/>
 
